<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home_navigation_menu"/>
        <item
            android:id="@+id/navigation_item_addFriend"
            android:icon="@drawable/ic_person_add"
            android:title="@string/add_friend_tittle"
            />
        <item
            android:id="@+id/navigation_item_contacts"
            android:icon="@drawable/ic_contacts_copy"
            android:title="@string/contacts"
        />

        <item
            android:id="@+id/navigation_item_changePassword"
            android:icon="@drawable/ic_changepassword"
            android:title="@string/chanche_password"
            />

        <item
            android:id="@+id/navigation_item_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout_navigation_menu"/>
    </group>
</menu>