<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <include layout="@layout/toolbar"
        />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="16dp"
        android:paddingTop="@dimen/activity_vertical_margin"

        tools:context="com.projectv01.registration"
        android:layout_alignTop="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:text="@string/infoString"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />
        </TableRow>

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_name_login_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_number_login"
                android:inputType="phone"
                android:hint="@string/number" />
            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            />
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tableRowLogin"
            android:visibility="gone">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_password_login_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/input_password_login"
                    android:hint="@string/password_generate" />
            </android.support.design.widget.TextInputLayout>
        </TableRow>
        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/button_login"
                android:layout_weight="1"
                android:layout_margin="@dimen/activity_vertical_margin" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:id="@+id/button_registration"
                android:layout_weight="1"
                android:layout_margin="@dimen/activity_vertical_margin" />

        </TableRow>


    </TableLayout>



</RelativeLayout>